tests/security/taintThroughSpecificList/output.txt
ERROR: TaintedData - input.hack:8:10 - Detected tainted HTML tags